[strace] add GEM ioctls
Patch (strace-4.6-gem-ioctls.patch) originally from
Junfeng Dong <junfeng.dong@intel.com>

Signed-off-by: Juha Kallioinen <juha.kallioinen@jolla.com>

--- a/strace/linux/ioctlent.h.in
+++ b/strace/linux/ioctlent.h.in
@@ -1135,6 +1135,41 @@
 	{"linux/chio.h",	"CHIOSVOLTAG",	0x6312},
 	{"linux/chio.h",	"CHIOGVPARAMS",	0x6313},
 	{"linux/cm4000_cs.h",	"CM_IOSDBGLVL",	0x63fa},
+       {"drm/i915.h",                  "DRM_I915_INIT",        0x6440},
+       {"drm/i915.h",                  "DRM_I915_FLUSH",       0x6441},
+       {"drm/i915.h",                  "DRM_I915_FLIP",        0x6442},
+       {"drm/i915.h",                  "DRM_I915_BATCHBUFFER", 0x6443},
+       {"drm/i915.h",                  "DRM_I915_IRQ_EMIT",    0x6444},
+       {"drm/i915.h",                  "DRM_I915_IRQ_WAIT",    0x6445},
+       {"drm/i915.h",                  "DRM_I915_GETPARAM",    0x6446},
+       {"drm/i915.h",                  "DRM_I915_SETPARAM",    0x6447},
+       {"drm/i915.h",                  "DRM_I915_ALLOC",       0x6448},
+       {"drm/i915.h",                  "DRM_I915_FREE",        0x6449},
+       {"drm/i915.h",                  "DRM_I915_INIT_HEAP",   0x644a},
+       {"drm/i915.h",                  "DRM_I915_CMDBUFFER",   0x644b},
+       {"drm/i915.h",                  "DRM_I915_DESTROY_HEAP",        0x644c},
+       {"drm/i915.h",                  "DRM_I915_SET_VBLANK_PIPE",     0x644d},
+       {"drm/i915.h",                  "DRM_I915_GET_VBLANK_PIPE",     0x644e},
+       {"drm/i915.h",                  "DRM_I915_VBLANK_SWAP", 0x644f},
+       {"drm/i915.h",                  "DRM_I915_HWS_ADDR",    0x6451},
+       {"drm/i915.h",                  "DRM_I915_GEM_INIT",    0x6453},
+       {"drm/i915.h",                  "DRM_I915_GEM_EXECBUFFER",      0x6454},
+       {"drm/i915.h",                  "DRM_I915_GEM_PIN",     0x6455},
+       {"drm/i915.h",                  "DRM_I915_GEM_UNPIN",   0x6456},
+       {"drm/i915.h",                  "DRM_I915_GEM_BUSY",    0x6457},
+       {"drm/i915.h",                  "DRM_I915_GEM_THROTTLE",        0x6458},
+       {"drm/i915.h",                  "DRM_I915_GEM_ENTERVT", 0x6459},
+       {"drm/i915.h",                  "DRM_I915_GEM_LEAVEVT", 0x645a},
+       {"drm/i915.h",                  "DRM_I915_GEM_CREATE",  0x645b},
+       {"drm/i915.h",                  "DRM_I915_GEM_PREAD",   0x6465},
+       {"drm/i915.h",                  "DRM_I915_GEM_PWRITE",  0x645d},
+       {"drm/i915.h",                  "DRM_I915_GEM_MMAP",    0x645e},
+       {"drm/i915.h",                  "DRM_I915_GEM_SET_DOMAIN",      0x645f},
+       {"drm/i915.h",                  "DRM_I915_GEM_SW_FINISH",       0x6460},
+       {"drm/i915.h",                  "DRM_I915_GEM_SET_TILING",      0x6461},
+       {"drm/i915.h",                  "DRM_I915_GEM_GET_TILING",      0x6462},
+       {"drm/i915.h",                  "DRM_I915_GEM_GET_APERTURE",    0x6463},
+       {"drm/i915.h",                  "DRM_I915_GEM_MMAP_GTT",        0x6464},
 	{"media/v4l2-common.h",	"TUNER_SET_CONFIG",	0x645c},
 	{"media/v4l2-common.h",	"VIDIOC_INT_RESET",	0x6466},
 	{"media/s5p_fimc.h",	"S5P_FIMC_TX_END_NOTIFY",	0x6500},
