--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "upstream"]
-	path = upstream
-	url = git://git.code.sf.net/p/strace/code
+	path = strace
+	url = https://github.com/strace/strace.git
