--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "upstream"]
 	path = strace
-	url = https://github.com/strace/strace.git
+	url = https://github.com/sailfishos-mirror/strace.git
